<resources>
    <array name="galeria">
        <item>@drawable/annihilator</item>
        <item>@drawable/behemoth</item>
        <item>@drawable/ghostbc</item>
        <item>@drawable/nervosa</item>
        <item>@drawable/slayer</item>
        <item>@drawable/tool</item>
    </array>
    <string name="txtUser">Escribe tu nombre de usuario</string>
    <string name="txtPass">Escribe tu contrasena</string>
    <string name="btnForgot">Olvide mis datos</string>
    <string name="btnLogin">Iniciar sesion</string>

    <!--    Image Gallery-->
    <string name="app_name">Eva 3</string>
    <string name="widget_title">Gestor de Diseno</string>
    <string name="widget_user">Enrique Mena</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">Evaluacion 3</string>
</resources>
