<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dp">

    <ImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/user" />

    <EditText
        android:id="@+id/user"
        android:maxLines="1"
        android:layout_below="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtUser"
        android:textAppearance="?android:textAppearanceLarge"
        android:padding="10dp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/pass"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtPass"
        android:textAppearance="?android:textAppearanceLarge"
        android:padding="10dp"
        android:layout_below="@+id/user"
        android:inputType="textPassword"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:layout_below="@id/pass"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:alignmentMode="alignBounds"
        android:padding="10dp">

        <Button
            android:id="@+id/forgot"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:onClick="forgotPassword"
            android:text="@string/btnForgot" />

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:onClick="validateLoginForm"
            android:text="@string/btnLogin" />
    </GridLayout>
</RelativeLayout>